# tenacious-bench

./: .env.example  .gitignore  LICENSE  LICENSE-DATA  README.md  audit_memo.md  blog_post.md  community_issue_draft.md  contamination_check.json  contamination_check.py  cost_log.csv  datasheet.md  email_sink.jsonl  evidence_graph.json  failure_taxonomy.md  generate_sft_pairs.py  inter_rater_agreement.md  interimreport.md  main.py  memo.docx  methodology.md  methodology_rationale.md  model_card.md  probe_library.json  pyproject.toml  requirements-local.txt  requirements.txt  schema.json  scoring_evaluator.py  synthetic_prospects.json  tenacious_style_guide.md  trace_log.jsonl  update_rubrics.py  write_ha_tasks.py
ablations/: ablation_results.json  baseline_outputs.jsonl  held_out_traces.jsonl  prompted_outputs.jsonl  run_ablations.py  trained_outputs.jsonl
examples/: ex01_tone_preservation.json  ex02_signal_grounding.json  ex03_llm_judge.json
generation_scripts/: dedup.py  judge_filter.py  multi_llm_synthesis.py  programmatic.py  trace_derived.py
prompts/: hard_seed_prompt.md  judge_filter_prompt.md  pairwise_prompt.md  pointwise_prompt.md  variation_prompt.md
scripts/: generate_memo.js  generate_memo_pdf.py  publish_adapter.py  publish_hf.py  upload_dataset_card.py  validate_schema.py
synthesis_memos/: memo_contamination_prevention.md  memo_datasheets_data_cards.md  memo_lima_alignment.md  memo_llm_as_judge.md  memo_magpie_synthesis.md  memo_synthetic_data_best_practices.md  memo_tulu3_sft_recipe.md
training/: hyperparams.yaml  train_lora.py
(+250 files in other folders)
