[project]
name = "tenacious-bench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.97.0",
    "datasets>=4.8.5",
    "huggingface-hub>=1.12.0",
    "jsonschema>=4.26.0",
    "langfuse>=4.5.1",
    "nltk>=3.9.4",
    "numpy>=2.4.4",
    "openai>=2.32.0",
    "pandas>=3.0.2",
    "python-dotenv>=1.2.2",
    "safetensors>=0.7.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "sentence-transformers>=5.4.1",
    "tiktoken>=0.12.0",
    "tokenizers>=0.22.2",
    "tqdm>=4.67.3",
    "transformers>=5.7.0",
]
